--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
     </main>
 
     <footer>
+        <a href="">WebStudio</a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26<br>
+            <a href="mailto:info@example.com">info@example.com</a><br>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+
+        </address>
 
 
     </footer>
